# deadwood

./: .gitignore  README.md  pyproject.toml
configs/: crown_ms.yaml  preprocess.yaml  preprocess_ht1.2_nrt0.6.yaml
configs/train_config/: crown_ms.yaml
data/: dataset.py  transforms.py
data_utils/: data_split.py
docs/superpowers/plans/: 2026-05-08-soft-dsm-masking.md
docs/superpowers/specs/: 2026-05-08-soft-dsm-masking-design.md
explore_and_process/: apply_dsm_mask.py  rasterize_crowns.py  tile_patches.py
hpc/: train_torch.sh
models/: blocks.py  model.py
scripts/: evaluate.py  preprocess.py  train.py
tests/: test_apply_dsm_mask.py  test_losses.py  test_metrics.py  test_preprocess_config.py
training/: learning_configurator.py  losses.py  metrics.py  trainer.py
utils/: checkpoint.py  data.py  device.py  geo.py  history.py  logger.py  viz.py
