[project]
name = "deadwood"
version = "0.1.0"
description = "Crown segmentation from multispectral aerial imagery"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "omegaconf>=2.3",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "rasterio>=1.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchgeo>=0.9.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9",
    "ty>=0.0.1a1",
]

# ── PyTorch index: CPU wheels on Windows/macOS, CUDA 12.8 on Linux (HPC) ────
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu",   marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu",   marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
